small changes, need revision but have to update rn

--- a/services-page/services.html
+++ b/services-page/services.html
@@ -16,7 +16,7 @@
 		</hgroup>
 		<nav>
 			<div class="navlink">
-				<a href="#">Home</a>
+				<a href="https://nels2.github.io/ICX-home-page/">Home</a>
 			</div>
 			<div class="navlink">
 				<a href="https://bruhboxchat.nels277.repl.co/ContactICX">Live Support</a>
@@ -40,7 +40,7 @@
         <article>
             <script src="https://ajax.googleapis.com/ajax/libs/jquery/2.1.1/jquery.min.js"></script>
             <div class="btn-group">
-                <button class="btn-toggle" style="width:151px;" type="button" id="characters" onchange="GetText()">Services</button>
+                <button class="btn-toggle" style="width:151px;" type="button" id="characters" onchange="GetText(this)">Services</button>
                 <ul class="dropdown-menu">
                     <li id="PChw">Computer Hardware</li>
                     <li id="Mobhw">Mobile Hardware</li>
